force-app/main/default/objects/custom_create248__c/custom_create248__c.object-meta.xml
<CustomObject>
    <label>Custom created object248</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects248</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>