force-app/main/default/objects/custom_create248__c/fields/custom_create_248field571__c.field-meta.xml
<CustomField>
    <fullName>custom_create_248field571__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 248field571</label>
    <type>Checkbox</type>
</CustomField>